<resources>
    <string name="app_name">fettapp</string>

    <!--Pantalla despues del splash screen-->
    <string name="Registro">Registrar Ahora</string>
    <string name="Inicio_Sesion">Iniciar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Pantalla de Inicio de sesión -->

    <!--Pantalla de Registro -->
    <string name="user">Gordito   </string>
    <string name="pass">Contraseña</string>
    <string name="email">Correo   </string>

    <string name="IntEmail">Introduce tu correo</string>
    <string name="IntUser">Introduce tu usuario</string>
    <string name="IntPass">Introduce tu contraseña</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="title_activity_menuprincipal">menuprincipal</string>
    <string name="title_home">Noticias</string>
    <string name="title_dashboard">Inicio</string>
    <string name="title_notifications">Configuración</string>

    <string name="config">Configuración</string>
    <string name="start">Inicio</string>
    <string name="search">Noticias</string>

    <string name="revokeaccess">Error al revocar el acceso</string>
    <string name="err_close_sesion">Error al cerrar sesión</string>
    <!--Pantalla preferencias-->

    <!--Pantalla principal-->

    <!--Pantalla de mapa-->

    <!--Pantalla de Busqueda-->

    <!--Pantalla de mapa configuración-->


</resources>
