<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro_user"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="10dp"
    android:fontFamily="@font/pt_sans_narrow">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/fett_iconsm"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#4267b2"
        android:layout_marginBottom="10dp"
        android:textColor="@color/fontWithe"
        android:text="facebook"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Google"
        android:textColor="@color/fontWithe"
        android:background="#db3236"/>

</LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="15dp"
                android:text="@string/user" />
            <EditText
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="15dp"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/IntUser"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="15dp"
                android:text="@string/email" />
            <EditText
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="15dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/IntEmail"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="15dp"
                android:text="@string/pass" />
            <EditText
                android:inputType="textPassword"
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="15dp"
                android:maxLines="1"

                android:hint="@string/IntPass"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:background="@color/colorPrimary"
        android:textColor="@color/fontWithe"
        android:fontFamily="@font/pt_sans_narrow"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/Registro"
        android:drawableStart="@drawable/ic_person_add"
        android:textSize="25sp"
        android:paddingEnd="50dp"
        android:paddingLeft="50dp"

        />


</android.widget.LinearLayout>